# src-watch

./: .travis.yml  LICENSE  README.md  src-watch.cabal
src/: Main.hs  Watch.hs
src/Watch/: Investigate.hs  Logger.hs  Matches.hs  Options.hs  References.hs  Spew.hs  Types.hs
tests/: hlint.hs
