name:                src-watch
version:             0.1.0.0
synopsis:            Source watcher for Yesod and friends
description:
  src-watch looks for filepaths inside Template Haskell splices, and rebuilds
  the Haskell file when the dependency is changed.
homepage:            https://github.com/joelteon/src-watch
license:             BSD3
license-file:        LICENSE
author:              Joel Taylor
maintainer:          me@joelt.io
category:            System
build-type:          Simple
cabal-version:       >=1.10

flag lib-Werror
  default: False
  manual: True

executable src-watch
  main-is:             Main.hs
  build-depends:       base == 4.*
                     , ansi-terminal
                     , bytestring
                     , containers
                     , cpphs
                     , directory
                     , filepath
                     , fsnotify
                     , Glob
                     , haskell-src-exts
                     , lens
                     , optparse-applicative
                     , mtl
                     , semigroups
                     , system-filepath
                     , transformers
                     , unix
  hs-source-dirs:      src
  ghc-options:         -Wall
  if flag(lib-Werror)
    ghc-options:       -Werror
  default-language:    Haskell2010

test-suite hlint
  type:           exitcode-stdio-1.0
  main-is:        hlint.hs
  hs-source-dirs: tests
  ghc-options:    -Wall -Werror
  build-depends: base, hlint
  default-language:    Haskell2010
